--- a/app/scss/global/_default.scss
+++ b/app/scss/global/_default.scss
@@ -10,7 +10,7 @@ body{
 	background-color: $white;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, section, div, nav, ul, li, button{
+body, h1, h2, h3, h4, h5, h6, p, section, div, nav, ul, li, button, span{
 	margin: 0;
 	padding: 0;
 }
